# virtualauto

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: experiment.md  format-finding.md
.github/workflows/: validate.yml
blender/: README.md
blender/assets/: README.md
dev/: README.md
docs/: AI_RETRIEVAL_PROTOCOL.md  BINARY_ASSET_POLICY.md  BLENDER_REPRODUCIBILITY.md  LICENSING_STATUS.md  OPERATIONAL_BASELINE.md  PROJECT_DOCTRINE.md  REPOSITORY_ARCHITECTURE.md  RIGHTS_AND_ASSET_BOUNDARIES.md  SCHEMA_LIFECYCLE.md
evidence/: README.md
examples/: README.md  blender_run.json  claim.json  evidence.json  experiment.json  node_contract.json  observation.json  source_asset.intermediate.json  transformation.json  unknown_field.json
experiments/: README.md  TEMPLATE.md
knowledge/: README.md
lab/: README.md
pipelines/: README.md
projects/: README.md  TEMPLATE.md
research/: README.md
schemas/: binary-fixture.schema.json  blender-run.schema.json  blender-toolchain.schema.json  canonical-artifact.schema.json  claim.schema.json  evidence.schema.json  experiment.schema.json  external-tool.schema.json  master-index.schema.json  mesh-report.schema.json  node-contract.schema.json  observation.schema.json  source-asset.schema.json  transformation.schema.json  unknown-field.schema.json
scripts/: build_master_index.py  validate_repository.py
tests/: README.md  __init__.py  test_assets.py  test_driveclub.py  test_repository.py
tools/: README.md
workflows/: README.md
(+134 files in other folders)
